# sistema-clube

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTACAO.md  README.md  deploy-vps.sh  docker-compose.example.yml  docker-compose.portainer.yml  docker-compose.swarm.yml  docker-compose.yml  release.ps1
.claude/: .gitignore  README.md  SKILL.md  settings.json
database/: 001_schema.sql  002_tabelas_principais.sql  003_dependentes_documentos.sql  003_documentos_dependentes.sql  004_diretoria_eleicoes.sql  004_financeiro.sql  005_compras_contas.sql  005_punicoes_convites_acesso.sql  006_acesso_eleicoes.sql  006_financeiro_mensalidades.sql  007_financeiro_contas.sql  007_punicoes_crm.sql  008_carteirinhas_config.sql  008_compras_cotacoes.sql  009_crm_whatsapp.sql  009_rls_funcoes.sql  010_logs_config.sql  010_rls_policies.sql  011_rls_policies.sql  011_triggers_funcoes.sql  012_rls_policies_tabelas.sql  012_seed.sql  013_functions_triggers.sql  014_functions_acesso.sql  015_functions_mensalidades.sql  016_storage.sql  017_seed.sql  018_whatsapp_providers.sql  01_schema.sql  02_schema_financeiro.sql  03_schema_acesso_eleicoes.sql  04_rls_policies.sql  05_indexes_triggers.sql  06_seed.sql  CRIAR_ADMIN.sql  EXECUTAR_SUPABASE.sql  README.sql  SEED_DADOS.sql
docs/: 03-FINANCEIRO.md  04-PORTARIA.md  05-AUTH.md  06-CRM.md  README.md
mcp-server/: .env.example  README.md  pyproject.toml  server.py
mobile-associado/: .dockerignore  Dockerfile  PUBLICACAO.md  README.md  TEXTOS-LOJAS.md  app.json  capacitor.config.json  next.config.js  nginx.conf  package-lock.json  package.json  (+2 more)
(+307 files in other folders)
