[project]
name = "sistema-clube-mcp"
version = "1.0.0"
description = "MCP Server para o Sistema de Gestão de Clube"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "supabase>=2.10.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sistema-clube-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
